--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,40 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
-    background-color: black;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Reusable width wrapper */
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 16px 24px;
+}
+
+/* Reusable width wrapper */
+.nav .container  {
+display: flex;
+justify-content: space-between;
+align-items: center;
+}
+
+
+.logo {
+    height: 40px;
+}
+
+nav ul {
+    display: flex;
+    gap: 24px;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+nav a {
+    color: black;  
+    text-decoration: none;;
 }
