--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -146,19 +146,23 @@ nav a {
     padding: 32px 0px;
     display: flex;
     gap: 24px;
-    min-height: 700px;
+    min-height: auto;
+    max-width: 100%;
+    margin: 0;
+    width: 100%;
 }
 
 
 .banner2-left {
-  height: 500px;
+  height: auto;
   display: flex;
   align-items: flex-start;
   justify-content: flex-start;
   flex-direction: column;
   margin: 0;
-  flex: 0 0 60%;
-  max-width: 60%;
+  flex: 1 1 100%;
+  max-width: 100%;
+  width: 100%;
 }
 
 .banner2-left img, video {
@@ -200,8 +204,9 @@ nav a {
   flex: 0 0 35%;
   max-width: 35%;
   aspect-ratio: 4 / 3;
-  overflow: hidden;
-
+  object-fit: cover;
+  object-position: center;
+  display: block;
 }
 
 
@@ -330,5 +335,32 @@ height: 50px;
     width: 100%;
     flex: 1 1 auto;
     justify-content: space-between;
+  }
+
+  /* Banner responsive styles */
+  .banner-inner {
+    flex-direction: column;
+    height: auto;
+    padding: 0;
+    gap: 0;
+  }
+
+  .banner img {
+    width: 100%;
+    height: auto;
+    flex: 1 1 100%;
+    padding: 0;
+    order: 1;
+  }
+
+  #bannertext {
+    width: 100%;
+    padding: 24px 16px;
+    order: 2;
+  }
+
+  /* Hide banner2-right stories on mobile */
+  .banner2-right {
+    display: none;
   }
 }
